--- a/2019/package.json
+++ b/2019/package.json
@@ -4,9 +4,9 @@
   "description": "advent of code, 2019",
   "main": "index.js",
   "dependencies": {
-    "eslint": "^6.7.2",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint": "^8.4.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0"
   },
   "devDependencies": {},
   "scripts": {},
